// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render a header image 1`] = `
<div
  className="card card-container"
>
  <img
    className="card__profile-img"
    src="plop.png"
  />
</div>
`;

exports[`Card should render title 1`] = `
<div
  className="card card-container"
>
  <p
    className="card__profile-title"
  >
    My Card Title
  </p>
</div>
`;

exports[`Card should render with no props 1`] = `
<div
  className="card card-container"
/>
`;
